@@ -66,8 +66,8 @@ multi trait_mod:<is>(Attribute $attr, Bool :$serial! where $_ == True --> Empty)
 #| * nullable - marks a column as NULLABLE
 #| * TBD
 multi trait_mod:<is>(Attribute $attr, :%column! --> Empty) is export {
-    if %column<references>:exists and (%column<model-name>:!exists) {
-        die "On Red:api<2> references must declaire :model-name and the references block must receive the model as reference"
+    if %column<references>:exists and (%column{<model-name model-type>.all}:!exists) {
+        die "On Red:api<2> references must declaire :model-name (or :model-type) and the references block must receive the model as reference"
     }
     $attr does Red::Attr::Column(%column);
 }
@@ -86,6 +86,17 @@ multi trait_mod:<is>(Attribute $attr, :$referencing! (Str :$model!, Str :$column
     trait_mod:<is>($attr, :column{ :$nullable, model-name => $model, column-name => $column, :$require })
 }
 
+
+#| Trait that defines a reference
+multi trait_mod:<is>(Attribute $attr, :$referencing! (&referencing!, Mu:U :$model!, Bool :$nullable = True ) --> Empty) is export {
+    $model.^add_role: Red::Model;
+    trait_mod:<is>($attr, :column{ :$nullable, :references(&referencing), model-type  => $model })
+}
+
+#| Trait that defines a reference
+multi trait_mod:<is>(Attribute $attr, :$referencing! (Mu:U :$model!, Str :$column!, Bool :$nullable = True ) --> Empty) is export {
+    trait_mod:<is>($attr, :column{ :$nullable, model-type => $model, column-name => $column })
+}
 #| This trait allows setting a custom name for a table corresponding to a model.
 #| For example, `model MyModel is table<custom_table_name> {}` will use `custom_table_name`
 #| as the name of the underlying database table.
@@ -107,6 +118,13 @@ multi trait_mod:<is>(Attribute $attr, :$relationship! (&relationship, Str :$mode
     die "Please, use the has-one experimental feature (use Red <has-one>) to allow using it on relationships"
     	if $has-one && !%Red::experimentals<has-one>;
     $attr.package.^add-relationship: $attr, &relationship, |(:$model with $model), |(:$require with $require), :$optional, :$no-prefetch, |(:$has-one if $has-one)
+}
+
+#| Trait that defines a relationship
+multi trait_mod:<is>(Attribute $attr, :$relationship! (&relationship, Mu:U :$model!, Bool :$optional, Bool :$no-prefetch, Bool :$has-one) --> Empty) is export {
+    die "Please, use the has-one experimental feature (use Red <has-one>) to allow using it on relationships"
+        if $has-one && !%Red::experimentals<has-one>;
+    $attr.package.^add-relationship: $attr, &relationship, :model-type($model), :$optional, :$no-prefetch, |(:$has-one if $has-one)
 }
 
 #| Trait that defines a relationship
